--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ header {
 }
 /* FAVOURITES STYLES ENDS */
 
-#loader{
+#curr-loader{
     font-size: 24px;
     text-align: center;
     margin-bottom: 40px;
